# skillfactory-hackaton-2

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  analysis_report.ipynb  pyproject.toml  requirements.txt  run_project.sh  setup_dev.sh
.github/workflows/: ci.yml
code/: api.py  sber_auto_model.py
docs/: ANALYSIS_RESULTS.md  MODEL_CHOICE.md  README.md
docs/code/: api.md  sber_auto_model.md
example/: demo_queries.py
scripts/: save_charts.py
tests/: test_model.py  test_notebook.py  test_project.py
